added lesson 02 homework

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <li>
             <a href="01-cv/index.html">Lesson 01-cv</a>
         </li>
+        <li>
+            <a href="02-semantic/index.html">Lesson 02-semantic</a>
+        </li>
     </ul>
 </body>
 </html>
