--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <li>
             <a href="02-semantic/index.html">Lesson 02-semantic</a>
         </li>
+        <li>
+            <a href="03-figma/index.html">Lesson 03-figma</a>
+        </li>
     </ul>
 </body>
 </html>
