--- a/03-figma/index.html
+++ b/03-figma/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Figma</title>
+    <style>
+        .img {
+            width: 100%;
+        }
+        .container {
+            width: min(90%, 970px);
+            margin: 0 auto;
+            border: 2px solid red;
+        }
+
+        .footer_container {
+            width: min(90%, 350px);
+            margin: 0 auto;
+            border: 2px solid green;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -25,22 +41,22 @@
 
         <section>
             <h2 id="about-me">About me</h2>
-            <div>Hi,I'm Denis-UX/UI designer from Minsk.</div>
-            <div>I'm interested in design and everything connected with it.</div>
+            <div class="container">Hi,I'm Denis-UX/UI designer from Minsk.</div>
+            <div class="container">I'm interested in design and everything connected with it.</div>
             <br>
-            <div>I'm studying at courses "Web and mobile design </div>
-            <div>interfaces" in IT-Academy.</div>
+            <div class="container">I'm studying at courses "Web and mobile design </div>
+            <div class="container">interfaces" in IT-Academy.</div>
             <br>
-            <div>Ready to imhlement excellent projects</div> 
-            <div>wonderful people.</div>
+            <div class="container">Ready to imhlement excellent projects</div> 
+            <div class="container">wonderful people.</div>
         </section>
 
         <section>
             <h2 id="skills">Skills</h2>
-            <div>I work in such programs as</div>
+            <div class="container">I work in such programs as</div>
             <br>
             <img src="assets/img/Ps.png" alt="">
-            <div>Adobe Photoshop</div>
+            <div class="container">Adobe Photoshop</div>
             <ul>
                 <li><img src="assets/img/star-icon.png" alt=""></li>
                 <li><img src="assets/img/star-icon.png" alt=""></li>
@@ -49,7 +65,7 @@
                 <li><img src="assets/img/star-icon2.png" alt=""></li>
             </ul>
             <img src="assets/img/Ai.png" alt="">
-            <div>Adobe Illustrator</div>
+            <div class="container">Adobe Illustrator</div>
             <ul>
                 <li><img src="assets/img/star-icon.png" alt=""></li>
                 <li><img src="assets/img/star-icon.png" alt=""></li>
@@ -58,7 +74,7 @@
                 <li><img src="assets/img/star-icon2.png" alt=""></li>
             </ul>
             <img src="assets/img/Ae.png" alt="">
-            <div>Adobe After Effects</div>
+            <div class="container">Adobe After Effects</div>
             <ul>
                 <li><img src="assets/img/star-icon.png" alt=""></li>
                 <li><img src="assets/img/star-icon.png" alt=""></li>
@@ -67,7 +83,7 @@
                 <li><img src="assets/img/star-icon2.png" alt=""></li>
             </ul>
             <img src="assets/img/Figma.png" alt="">
-            <div>Figma</div>
+            <div class="container">Figma</div>
             <ul>
                 <li><img src="assets/img/star-icon.png" alt=""></li>
                 <li><img src="assets/img/star-icon.png" alt=""></li>
@@ -96,8 +112,8 @@
 
         <footer>
             <h2 id="contacts">Contacts</h2>
-            <div>Want to know more or just chat?</div>
-            <div>You are welcome!</div>
+            <div class="footer_container">Want to know more or just chat?</div>
+            <div class="footer_container">You are welcome!</div>
             <br>
             <button>Send message</button>
             <ul>
@@ -106,8 +122,8 @@
                 <li><img src="assets/img/behance.png" alt="Behance"></li>
                 <li><img src="assets/img/dribbble.png" alt="Dribble"></li>
             </ul>
-            <div>Like me on</div>
-            <div>Linkedin, Instagram, Behance, Dribble</div>
+            <div class="footer_container">Like me on</div>
+            <div class="footer_container">Linkedin, Instagram, Behance, Dribble</div>
         </footer>
     </main>
     
