--- a/03-figma/index.html
+++ b/03-figma/index.html
@@ -23,32 +23,36 @@
 </head>
 <body>
     <header>
-        <nav id="#home">
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about-me">About me</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contacts">Contacts</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <nav id="#home">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about-me">About me</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contacts">Contacts</a></li>
+                </ul>
+            </nav>
+    </div>
     </header>
     <main>
         <section>
-            <h2>Denis Novik</h2>
-            <img src="assets/img/photox940.jpg" alt="Denis Novik">
+            <div class="container">
+                <h2>Denis Novik</h2>
+                <img src="assets/img/photox940.jpg" alt="Denis Novik">
+            </div>
         </section>
 
         <section>
-            <h2 id="about-me">About me</h2>
-            <div class="container">Hi,I'm Denis-UX/UI designer from Minsk.</div>
-            <div class="container">I'm interested in design and everything connected with it.</div>
-            <br>
-            <div class="container">I'm studying at courses "Web and mobile design </div>
-            <div class="container">interfaces" in IT-Academy.</div>
-            <br>
-            <div class="container">Ready to imhlement excellent projects</div> 
-            <div class="container">wonderful people.</div>
+            <div class="container">
+                <h2 id="about-me">About me</h2>
+                <p>Hi,I'm Denis-UX/UI designer from Minsk.</p>
+                <p>I'm interested in design and everything connected with it.</p>
+                <br>
+                <p>I'm studying at courses "Web and mobile design <br>interfaces" in IT-Academy.</p>
+                <br>
+                <p>Ready to imhlement excellent projects <br>wonderful people.</p>
+        </div> 
         </section>
 
         <section>
