--- a/03-figma/index.html
+++ b/03-figma/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Figma</title>
     <style>
-        .img {
+        img {
             width: 100%;
         }
         .container {
@@ -56,78 +56,85 @@
         </section>
 
         <section>
-            <h2 id="skills">Skills</h2>
-            <div class="container">I work in such programs as</div>
-            <br>
-            <img src="assets/img/Ps.png" alt="">
-            <div class="container">Adobe Photoshop</div>
-            <ul>
-                <li><img src="assets/img/star-icon.png" alt=""></li>
-                <li><img src="assets/img/star-icon.png" alt=""></li>
-                <li><img src="assets/img/star-icon2.png" alt=""></li>
-                <li><img src="assets/img/star-icon2.png" alt=""></li>
-                <li><img src="assets/img/star-icon2.png" alt=""></li>
-            </ul>
-            <img src="assets/img/Ai.png" alt="">
-            <div class="container">Adobe Illustrator</div>
-            <ul>
-                <li><img src="assets/img/star-icon.png" alt=""></li>
-                <li><img src="assets/img/star-icon.png" alt=""></li>
-                <li><img src="assets/img/star-icon.png" alt=""></li>
-                <li><img src="assets/img/star-icon2.png" alt=""></li>
-                <li><img src="assets/img/star-icon2.png" alt=""></li>
-            </ul>
-            <img src="assets/img/Ae.png" alt="">
-            <div class="container">Adobe After Effects</div>
-            <ul>
-                <li><img src="assets/img/star-icon.png" alt=""></li>
-                <li><img src="assets/img/star-icon.png" alt=""></li>
-                <li><img src="assets/img/star-icon.png" alt=""></li>
-                <li><img src="assets/img/star-icon.png" alt=""></li>
-                <li><img src="assets/img/star-icon2.png" alt=""></li>
-            </ul>
-            <img src="assets/img/Figma.png" alt="">
-            <div class="container">Figma</div>
-            <ul>
-                <li><img src="assets/img/star-icon.png" alt=""></li>
-                <li><img src="assets/img/star-icon.png" alt=""></li>
-                <li><img src="assets/img/star-icon.png" alt=""></li>
-                <li><img src="assets/img/star-icon.png" alt=""></li>
-                <li><img src="assets/img/star-icon.png" alt=""></li>
-            </ul>
+            <div class="container">
+                <h2 id="skills">Skills</h2>
+                <p>I work in such programs as</p>
+                <br>
+                <img src="assets/img/Ps.png" alt="">
+                <p>Adobe Photoshop</p>
+                <ul>
+                    <li><img src="assets/img/star-icon.png" alt=""></li>
+                    <li><img src="assets/img/star-icon.png" alt=""></li>
+                    <li><img src="assets/img/star-icon2.png" alt=""></li>
+                    <li><img src="assets/img/star-icon2.png" alt=""></li>
+                    <li><img src="assets/img/star-icon2.png" alt=""></li>
+                </ul>
+                <img src="assets/img/Ai.png" alt="">
+                <p>Adobe Illustrator</p>
+                <ul>
+                    <li><img src="assets/img/star-icon.png" alt=""></li>
+                    <li><img src="assets/img/star-icon.png" alt=""></li>
+                    <li><img src="assets/img/star-icon.png" alt=""></li>
+                    <li><img src="assets/img/star-icon2.png" alt=""></li>
+                    <li><img src="assets/img/star-icon2.png" alt=""></li>
+                </ul>
+                <img src="assets/img/Ae.png" alt="">
+                <p>Adobe After Effects</p>
+                <ul>
+                    <li><img src="assets/img/star-icon.png" alt=""></li>
+                    <li><img src="assets/img/star-icon.png" alt=""></li>
+                    <li><img src="assets/img/star-icon.png" alt=""></li>
+                    <li><img src="assets/img/star-icon.png" alt=""></li>
+                    <li><img src="assets/img/star-icon2.png" alt=""></li>
+                </ul>
+                <img src="assets/img/Figma.png" alt="">
+            
+                <p>Figma</p>
+                <ul>
+                    <li><img src="assets/img/star-icon.png" alt=""></li>
+                    <li><img src="assets/img/star-icon.png" alt=""></li>
+                    <li><img src="assets/img/star-icon.png" alt=""></li>
+                    <li><img src="assets/img/star-icon.png" alt=""></li>
+                    <li><img src="assets/img/star-icon.png" alt=""></li>
+                </ul>
+            </div>
         </section>
 
         <section>
-            <h2 id="portfolio">Portfolio</h2>
-            <img src="assets/img/Fashion-Store.png" alt="">
-            <br>
-            <a href="#Online_fasion_store-Homepage">Online fasion store-Homepage</a>
-            <br>
-            <br>
-            <img src="assets/img/reebok_web.png" alt="">
-            <br>
-            <a href="#Reebok_store-Concept">Reebok store Concept</a>
-            <br>
-            <br>
-            <img src="assets/img/braun-landing.png" alt="">
-            <br>
-            <a href="Braun_Landing_Page-Concepy">Braun Landing Page-Concepy</a>
+            <div class="container">
+                <h2 id="portfolio">Portfolio</h2>
+                <img src="assets/img/Fashion-Store.png" alt="">
+                <br>
+                <a href="#Online_fasion_store-Homepage">Online fasion store-Homepage</a>
+                <br>
+                <br>
+                <img src="assets/img/reebok_web.png" alt="">
+                <br>
+                <a href="#Reebok_store-Concept">Reebok store Concept</a>
+                <br>
+                <br>
+                <img src="assets/img/braun-landing.png" alt="">
+                <br>
+                <a href="Braun_Landing_Page-Concepy">Braun Landing Page-Concepy</a>
+            </div>
         </section>
 
         <footer>
-            <h2 id="contacts">Contacts</h2>
-            <div class="footer_container">Want to know more or just chat?</div>
-            <div class="footer_container">You are welcome!</div>
-            <br>
-            <button>Send message</button>
-            <ul>
-                <li><img src="assets/img/linkedin.png" alt="Linkedin"></li>
-                <li><img src="assets/img/instagram.png" alt="Instagram"></li>
-                <li><img src="assets/img/behance.png" alt="Behance"></li>
-                <li><img src="assets/img/dribbble.png" alt="Dribble"></li>
-            </ul>
-            <div class="footer_container">Like me on</div>
-            <div class="footer_container">Linkedin, Instagram, Behance, Dribble</div>
+            <div class="footer_container">
+                <h2 id="contacts">Contacts</h2>
+                <p>Want to know more or just chat?</p>
+                <p>You are welcome!</p>
+                <br>
+                <button>Send message</button>
+                <ul>
+                    <li><img src="assets/img/linkedin.png" alt="Linkedin"></li>
+                    <li><img src="assets/img/instagram.png" alt="Instagram"></li>
+                    <li><img src="assets/img/behance.png" alt="Behance"></li>
+                    <li><img src="assets/img/dribbble.png" alt="Dribble"></li>
+                </ul>
+                <p>Like me on</p>
+                <p>Linkedin, Instagram, Behance, Dribble</p>
+            </div>
         </footer>
     </main>
     
