--- a/01-cv/index.html
+++ b/01-cv/index.html
@@ -4,31 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1 style="text-align: center;">Resume</h1>
-    <a href="ua/index.html">UA</a>
-    <div>
+    <div class="container">
+        <h1>Resume</h1>
+        <a href="ua/index.html">UA</a>
+    </div>
+    <div class="container">
         <h2>Personal information</h2>
         <img src="assets/images/my-photo.jpg">
          <p>Plishchuk Serhii Ivanovyich</p>
          <p>Ukraine,Ivano-Frankivsk</p>
     </div>
-    <div>
+    <div class="container">
         <h2>Contacts and social networks</h2>
-<ul>
-    <li> <a href="https://www.instagram.com/sergii6542/" target="blank">Instagram</a></li>
-    <li> <a href="mailto:plish4uk2111@gmail.com" target="blank">plish4uk2111@gmail.com</a></li>
-    <li> <a href="tel:+380507217693">+38 (050) 721 76 93</a></li>
-</ul>
+        <ul>
+            <li> <a href="https://www.instagram.com/sergii6542/" target="blank">Instagram</a></li>
+            <li> <a href="mailto:plish4uk2111@gmail.com" target="blank">plish4uk2111@gmail.com</a></li>
+            <li> <a href="tel:+380507217693">+38 (050) 721 76 93</a></li>
+        </ul>
     </div>
-    <div>
+    <div class="container">
         <h2>Education</h2>
         <ul>
            <li>He received a complete secondary education</li>
         </ul>    
     </div>
-    <div>
+    <div class="container">
         <h2>Work experience</h2>
         <p><i>AUGUST <b>2023</b></i></p>
         <p> I work as a <b>bartender</b> in the cafe"Nad Prutom".</p>
