--- a/01-cv/ua/index.html
+++ b/01-cv/ua/index.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Резюме</title>
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
-    <h1 style="text-align: center;">Моє резюме</h1>
-    <a href="../index.html">EN</a>
-    <div>
+    <div class="container">
+        <h1>Моє резюме</h1>
+        <a href="../index.html">EN</a>
+    </div>
+    <div class="container">
         <h2>Персональна інформація</h2>
         <img src="../assets/images/my-photo.jpg">
          <p>Пліщук Сергій Іванович</p>
          <p>Україна, Івано-Франківськ</p>
     </div>
-    <div>
+    <div class="container">
         <h2>Контакти та соц мережі</h2>
 <ul>
     <li> <a href="https://www.instagram.com/sergii6542/" target="blank">Instagram</a></li>
@@ -22,13 +25,13 @@
     <li> <a href="tel:+380507217693">+38 (050) 721 76 93</a></li>
 </ul>
     </div>
-    <div>
+    <div class="container">
         <h2>Освіта</h2>
         <ul>
            <li> Здобув повну загальну середню освіту</li>
         </ul>    
     </div>
-    <div>
+    <div class="container">
         <h2>Досвід роботи</h2>
         <p><i>СЕРПЕНЬ <b>2023</b></i></p>
         <p> Працюю <b>барменом</b> в кафе "Над прутом"</p>
