added skills, footer, 04-form

--- a/03-figma/index.html
+++ b/03-figma/index.html
@@ -48,99 +48,166 @@
         </section>
 
         <section>
-            <div class="container">
+            <div class="container" id="text">
                 <h2 id="about-me">About me</h2>
-                <p>Hi,I'm Denis-UX/UI designer from Minsk.</p>
-                <p>I'm interested in design and everything connected with it.</p>
-                <br>
-                <p>I'm studying at courses "Web and mobile design <br>interfaces" in IT-Academy.</p>
-                <br>
-                <p>Ready to imhlement excellent projects <br>wonderful people.</p>
+                <div class="text">
+                    <p>Hi,I'm Denis-UX/UI designer from Minsk.</p>
+                    <p>I'm interested in design and everything connected with it.</p>
+                    <br>
+                    <p>I'm studying at courses "Web and mobile design <br>interfaces" in IT-Academy.</p>
+                    <br>
+                    <p>Ready to imhlement excellent projects <br>wonderful people.</p>
+                </div>
         </div> 
         </section>
 
-        <!-- <section class="skills">
-             <div class="container">
-                <h2 id="skills">Skills</h2>
-                <p>I work in such programs as</p>
-                <br>
-                <img src="assets/img/Ps.png" alt="">
-                <p>Adobe Photoshop</p>
-                <ul>
-                    <li><img src="assets/img/star-icon.png" alt=""></li>
-                    <li><img src="assets/img/star-icon.png" alt=""></li>
-                    <li><img src="assets/img/star-icon2.png" alt=""></li>
-                    <li><img src="assets/img/star-icon2.png" alt=""></li>
-                    <li><img src="assets/img/star-icon2.png" alt=""></li>
-                </ul>
-                <img src="assets/img/Ai.png" alt="">
-                <p>Adobe Illustrator</p>
-                <ul>
-                    <li><img src="assets/img/star-icon.png" alt=""></li>
-                    <li><img src="assets/img/star-icon.png" alt=""></li>
-                    <li><img src="assets/img/star-icon.png" alt=""></li>
-                    <li><img src="assets/img/star-icon2.png" alt=""></li>
-                    <li><img src="assets/img/star-icon2.png" alt=""></li>
-                </ul>
-                <img src="assets/img/Ae.png" alt="">
-                <p>Adobe After Effects</p>
-                <ul>
-                    <li><img src="assets/img/star-icon.png" alt=""></li>
-                    <li><img src="assets/img/star-icon.png" alt=""></li>
-                    <li><img src="assets/img/star-icon.png" alt=""></li>
-                    <li><img src="assets/img/star-icon.png" alt=""></li>
-                    <li><img src="assets/img/star-icon2.png" alt=""></li>
-                </ul>
-                <img src="assets/img/Figma.png" alt="">
-            
-                <p>Figma</p>
-                <ul>
-                    <li><img src="assets/img/star-icon.png" alt=""></li>
-                    <li><img src="assets/img/star-icon.png" alt=""></li>
-                    <li><img src="assets/img/star-icon.png" alt=""></li>
-                    <li><img src="assets/img/star-icon.png" alt=""></li>
-                    <li><img src="assets/img/star-icon.png" alt=""></li>
-                </ul>
+        <section id="skills">
+             <div class="container skills">
+                <h2>Skills</h2>
+                <div class="subtitle">I work in such programs as</div>
+                <ul class="skills-list">
+                    <li>
+                        <div class="skill-itam">
+                            <div class="skill-logo">
+                                <img src="assets/img/Ps.png" alt="">
+                            </div>
+                            <div class="skill-title">
+                                Adobe Photoshop
+                            </div>
+                            <div class="skill-rating">
+                                <span class="star"></span>
+                                <span class="star"></span>
+                                <span class="star gray"></span>
+                                <span class="star gray"></span>
+                                <span class="star gray"></span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="skill-itam">
+                            <div class="skill-logo">
+                                <img src="assets/img/Ai.png" alt="">
+                            </div>
+                            <div class="skill-title">
+                                Adobe Illustrator
+                            </div>
+                            <div class="skill-rating">
+                                <span class="star"></span>
+                                <span class="star"></span>
+                                <span class="star"></span>
+                                <span class="star gray"></span>
+                                <span class="star gray"></span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="skill-itam">
+                            <div class="skill-logo">
+                                <img src="assets/img/Ae.png" alt="">
+                            </div>
+                            <div class="skill-title">
+                                Adobe After Effects
+                            </div>
+                            <div class="skill-rating">
+                                <span class="star"></span>
+                                <span class="star"></span>
+                                <span class="star"></span>
+                                <span class="star"></span>
+                                <span class="star gray"></span>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="last">
+                        <div class="skill-itam">
+                            <div class="skill-logo">
+                                <img src="assets/img/Figma.png" alt="">
+                            </div>
+                            <div class="skill-title">
+                                Figma
+                            </div>
+                            <div class="skill-rating">
+                                <span class="star"></span>
+                                <span class="star"></span>
+                                <span class="star"></span>
+                                <span class="star"></span>
+                                <span class="star"></span>
+                            </div>
+                        </div>
+                    </li>
+                </ul>   
             </div>
-        </section> -->
+        </section>
 
-        <section>
+        <section class="portfolio">
             <div class="container">
                 <h2 id="portfolio">Portfolio</h2>
                 <div class="fashion-store">
-                    <img src="assets/img/Fashion-Store.png" alt="">
-                    <br>
-                    <a href="#Online_fasion_store-Homepage">Online fasion store-Homepage</a>
+                    <div class="fashion logo">
+                        <img src="assets/img/Fashion-Store.png" alt="">
+                    </div>
+                    <div class="fashion link">
+                        <a href="#Online_fasion_store-Homepage">Online fasion store-Homepage</a>
+                    </div>
                 </div>
                 <div class="reebok">
-                    <img src="assets/img/reebok_web.png" alt="">
-                    <br>
-                    <a href="#Reebok_store-Concept">Reebok store Concept</a>
+                    <div class="reebok logo">
+                        <img src="assets/img/reebok_web.png" alt="">
+                    </div>
+                    <div class="reebok link">
+                        <a href="#Reebok_store-Concept">Reebok store Concept</a>
+                    </div>
                 </div>
                 <div class="braun">
-                    <img src="assets/img/braun-landing.png" alt="">
-                    <br>
-                    <a href="#Braun_Landing_Page-Concepy">Braun Landing Page-Concepy</a>
+                    <div class="braun logo">
+                        <img src="assets/img/braun-landing.png" alt="">
+                    </div>
+                    <div class="braun link">
+                        <a href="#Braun_Landing_Page-Concepy">Braun Landing Page-Concepy</a>
+                    </div>
                 </div>
             </div>
         </section>
-        <!-- <footer>
+        <footer>
             <div class="footer_container">
-                <h2 id="contacts">Contacts</h2>
-                <p>Want to know more or just chat?</p>
-                <p>You are welcome!</p>
-                <br>
-                <button>Send message</button>
-                <ul>
-                    <li><img src="assets/img/linkedin.png" alt="Linkedin"></li>
-                    <li><img src="assets/img/instagram.png" alt="Instagram"></li>
-                    <li><img src="assets/img/behance.png" alt="Behance"></li>
-                    <li><img src="assets/img/dribbble.png" alt="Dribble"></li>
-                </ul>
-                <p>Like me on</p>
-                <p>Linkedin, Instagram, Behance, Dribble</p>
+                <div class="title">
+                    <h2 id="contacts">Contacts</h2>
+                    <p>Want to know more or just chat?</p>
+                    <p>You are welcome!</p>
+                </div>
+                <div class="contacts logo">
+                    <div class="button">
+                        <button type="button">Send message</button>
+                    </div>
+                    <ul>
+                        <li>
+                            <div class="contacts logo img">
+                                <img src="assets/img/linkedin.png" alt="Linkedin">
+                            </div>
+                        </li>
+                        <li>
+                            <div class="contacts logo img">
+                                <img src="assets/img/instagram.png" alt="Instagram">
+                            </div>
+                        </li>
+                        <li>
+                            <div class="contacts logo img ">
+                                <img src="assets/img/behance.png" alt="Behance">
+                            </div>
+                        </li>
+                        <li class="dribble">
+                            <div class="contacts logo img ">
+                                <img src="assets/img/dribbble.png" alt="Dribble">
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="contacts text">
+                    <p>Like me on</p>
+                    <p>Linkedin, Instagram, Behance,</p> 
+                    <p>Dribble</p>
+                </div>
             </div>
-        </footer> -->
+        </footer>
     </main>
     
 </body>
