--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <li>
             <a href="03-figma/index.html">Lesson 03-figma</a>
         </li>
+        <li>
+            <a href="04-form/index.html">Lesson 04-form</a>
+        </li>
     </ul>
 </body>
 </html>
