correction of styles

--- a/03-figma/index.html
+++ b/03-figma/index.html
@@ -30,7 +30,7 @@
         <div class="container ">
             <nav class="main-nav">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="#home">Home</a></li>
                     <li><a href="#about-me">About me</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
@@ -42,7 +42,7 @@
     <main>
         <section class="novik">
             <div class="container Novik">
-                <h1>Denis Novik</h1>
+                <h1 id="#home">Denis Novik</h1>
                 <img src="assets/img/photox940.jpg" alt="Denis Novik">
             </div>
         </section>
