--- a/04-form/index.html
+++ b/04-form/index.html
@@ -54,9 +54,9 @@
                 <label for="checkbox">Я погоджуюсь з обробкою персональних даних</label> 
             </div>
             <div class="form-row">
-                <label for="submit"></label>
-                <input type="reset" name="reset" id="reset" value="Очистити форму">
-                <input type="submit" name="submit" id="submit" value="Зареєструватися">
+                <label for="button"></label>
+                <button type="reset" name="reset" id="reset" value="Очистити форму">Очистити форму</button>
+                <button id="button" value="submit">Зареєструватися</button>
             </div>
         </form>
     </div>
