--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <li>
             <a href="04-form/index.html">Lesson 04-form</a>
         </li>
+        <li>
+            <a href="05-css-shopping-list/">Lesson 05-css-shopping-list</a>
+        </li>
     </ul>
 </body>
 </html>
