--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <li>
             <a href="06-css-weather/index.html">Lesson 06-CSS-Weather</a>
         </li>
+        <li>
+            <a href="07-producly/index.html">Lesson 07-Produclu</a>
+        </li>
     </ul>
 </body>
 </html>
