--- a/07-producly/index.html
+++ b/07-producly/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="sign-up">
                 <button type="button">Sign In</button>
-                <button type="submit">Sing Up</button>
+                <button type="submit">Sign Up</button>
             </div>
         </div>
    </header>
