--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <li>
             <a href="07-producly/index.html">Lesson 07-Produclu</a>
         </li>
+        <li>
+            <a href="08-our-team/index.html"> Lesson 08-Our-TSeam</a>
+        </li>
     </ul>
 </body>
 </html>
